# aya-lsm-args-example

./: Cargo.toml  Makefile  README.md
.vim/: coc-settings.json
lsm-args/: Cargo.toml
lsm-args-common/: Cargo.toml
lsm-args-ebpf/: Cargo.toml
lsm-args-ebpf/src/: main.rs
lsm-args/src/: main.rs
xtask/src/: build_ebpf.rs
