[package]
name = "lsm-args-ebpf"
version = "0.1.0"
edition = "2018"

[dependencies]
aya-bpf = { git = "http://github.com/aya-rs/aya", branch = "main" }
lsm-args-common = { path = "../lsm-args-common" }

[[bin]]
name = "lsm-args"
path = "src/main.rs"

[profile.dev]
panic = "abort"
debug = 1
opt-level = 2
overflow-checks = false

[profile.release]
panic = "abort"

[workspace]
members = []

[patch."http://github.com/aya-rs/aya"]
aya-bpf = { git = "https://github.com/willfindlay/aya", branch = "arguments" }
