[package]
name = "lsm-args"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch="main" }
lsm-args-common = { path = "../lsm-args-common", features=["userspace"] }
anyhow = "1.0.42"
ctrlc = "3.2"

[[bin]]
name = "lsm-args"
path = "src/main.rs"
